# NDKTest1

app/: 1.txt  build.gradle
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/base/: base.h  jvm.cpp  jvm.h
app/src/main/cpp/jni/: JNIReferenceType.cpp  JNIReferenceType.h  jni_basic_type.cpp  jni_basic_type.h  jni_dynamic_load.cpp  jni_dynamic_load.h  jni_exception.cpp  jni_exception.h  jni_product_and_consume.cpp  jni_product_and_consume.h  jni_reference.cpp  jni_reference.h  jni_thread.cpp  jni_thread.h  jni_thread_callback.cpp  jni_thread_callback.h  jni_thread_lock.cpp  jni_thread_lock.h
app/src/main/cpp/people/: People.cpp  People.h
app/src/main/java/com/example/myapplication/: Animal.java  JNIBasicType.java  JNIDynamicLoad.java  JNIException.java  JNIReference.java  JNIReferenceType.java  JNIThread.java  JNIThreadCallback.java  JNIThreadLock.java  MainActivity.java
app/src/main/java/com/example/myapplication/interfaces/: ICallback.java  IThreadCallback.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
